SearchBar: Fix scrollbar position in default-layout controls
The `overflow-x: overlay` declaration is obsolete, since no
browser (not even chrome) supports it anymore.

--- a/asset/css/controls.less
+++ b/asset/css/controls.less
@@ -154,11 +154,6 @@
   }
 
   > .search-controls > .search-bar .filter-input-area {
-    label {
-      &::after,
-      input {
-        padding: 0 .5em;
-      }
-    }
+    --term-padding-v: 0px;
   }
 }
